Created script to automatically generate most item advancements and item loot tables
-Fixed typos in en_us.json

--- a/src/Data-Pack/Lockdown/data/lockdown/advancement/lockdown/force_field_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/advancement/lockdown/force_field_projector.json
@@ -13,7 +13,7 @@
         },
         "description": {
             "translate": "advancement.lockdown.force_field_projector.description",
-            "fallback": "The force field projector generates an indestructable force field.  Right-click the block to adjust the field size."
+            "fallback": "The force field projector generates an indestructible force field.  Right-click the block to adjust the field size."
         },
         "show_toast": true,
         "announce_to_chat": true
