Restored functionality to the laser projector
-Laser projector now uses a model for the beam instead of particles
-Laser projector can now be stopped by blocks
-Laser projector now has a dedicated damage type
-Increased maximum range of laser projector from five to ten blocks
-Laser projector can now be placed vertically

--- a/src/Data-Pack/Lockdown/data/lockdown/damage_type/projector_laser.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/damage_type/projector_laser.json
@@ -1,5 +1,5 @@
 {
-    "message_id": "lockdown.flamethrower",
+    "message_id": "lockdown.laser",
     "exhaustion": 0,
     "scaling": "never",
     "effects": "burning",
