--- a/src/Data-Pack/Lockdown/data/lockdown/recipe/laser_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/recipe/laser_projector.json
@@ -27,7 +27,7 @@
         ]
     },
     "result": {
-        "id": "minecraft:pig_spawn_egg",
+        "id": "minecraft:item_frame",
         "components": {
             "minecraft:item_name": "{\"translate\":\"item.lockdown.laser_projector\",\"fallback\":\"Laser Projector\"}",
             "minecraft:item_model": "lockdown:machine/laser_projector_off",
@@ -36,7 +36,7 @@
                     "name": "laser_projector"
                 }
             },
-            "minecraft:entity_data": "{id:\"minecraft:marker\",Tags:[\"lockdown.placer\",\"lockdown.placer.laser_projector\"]}"
+            "minecraft:entity_data": "{id:\"minecraft:item_frame\",Tags:[\"lockdown.placer\",\"lockdown.placer.laser_projector\"],Invisible:1b,CustomName:'\"If you can read this, something has gone wrong\"',CustomNameVisible:1b}"
         }
     }
 }
