--- a/src/Data-Pack/Lockdown/data/lockdown/item_modifier/item/laser_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/item_modifier/item/laser_projector.json
@@ -10,11 +10,11 @@
                     "configure": true
                 }
             },
-            "minecraft:entity_data": "{id:\"minecraft:marker\",Tags:[\"lockdown.placer\",\"lockdown.placer.laser_projector\"]}"
+            "minecraft:entity_data": "{id:\"minecraft:item_frame\",Tags:[\"lockdown.placer\",\"lockdown.placer.laser_projector\"],Invisible:1b,CustomName:'\"If you can read this, something has gone wrong\"',CustomNameVisible:1b}"
         }
     },
     {
         "function": "minecraft:set_item",
-        "item": "minecraft:pig_spawn_egg"
+        "item": "minecraft:item_frame"
     }
 ]
