--- a/src/Data-Pack/Lockdown/data/lockdown/loot_table/item/laser_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/loot_table/item/laser_projector.json
@@ -5,7 +5,7 @@
             "entries": [
                 {
                     "type": "minecraft:item",
-                    "name": "minecraft:pig_spawn_egg",
+                    "name": "minecraft:item_frame",
                     "functions": [
                         {
                             "function": "minecraft:reference",
