Switched spawn-egg-based items over to using item frames
This prevents an issue where it was possible to apply
spawn-egg-based items to spawners.  Additionally, the
placement rules for item frames are slightly better for
faking custom blocks compared to that of spawn eggs.

--- a/src/Data-Pack/Lockdown/data/lockdown/recipe/force_field_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/recipe/force_field_projector.json
@@ -24,7 +24,7 @@
         ]
     },
     "result": {
-        "id": "minecraft:pig_spawn_egg",
+        "id": "minecraft:item_frame",
         "components": {
             "minecraft:item_name": {
                 "translate": "item.lockdown.force_field_projector"
@@ -36,11 +36,14 @@
                 }
             },
             "minecraft:entity_data": {
-                "id":"minecraft:marker",
+                "id":"minecraft:item_frame",
                 "Tags": [
                     "lockdown.placer",
                     "lockdown.placer.force_field_projector"
-                ]
+                ],
+                "Invisible": true,
+                "CustomName": "If you can read this, something has gone wrong",
+                "CustomNameVisible": true
             },
             "minecraft:rarity": "rare"
         }
