--- a/src/Data-Pack/Lockdown/data/lockdown/item_modifier/item/force_field_projector.json
+++ b/src/Data-Pack/Lockdown/data/lockdown/item_modifier/item/force_field_projector.json
@@ -12,17 +12,20 @@
                 }
             },
             "minecraft:entity_data": {
-                "id": "minecraft:marker",
+                "id": "minecraft:item_frame",
                 "Tags": [
                     "lockdown.placer",
                     "lockdown.placer.force_field_projector"
-                ]
+                ],
+                "Invisible": true,
+                "CustomName": "If you can read this, something has gone wrong",
+                "CustomNameVisible": true
             },
             "minecraft:rarity": "rare"
         }
     },
     {
         "function": "minecraft:set_item",
-        "item": "minecraft:pig_spawn_egg"
+        "item": "minecraft:item_frame"
     }
 ]
